@@ -1,6 +1,6 @@
 /* Manages interpreters for GDB, the GNU debugger.
 
-   Copyright (C) 2000-2013 Free Software Foundation, Inc.
+   Copyright (C) 2000, 2002, 2003 Free Software Foundation, Inc.
 
    Written by Jim Ingham <jingham@apple.com> of Apple Computer, Inc.
 
@@ -8,7 +8,7 @@
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 3 of the License, or
+   the Free Software Foundation; either version 2 of the License, or
    (at your option) any later version.
 
    This program is distributed in the hope that it will be useful,
@@ -17,7 +17,9 @@
    GNU General Public License for more details.
 
    You should have received a copy of the GNU General Public License
-   along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 51 Franklin Street, Fifth Floor,
+   Boston, MA 02110-1301, USA. */
 
 /* This is just a first cut at separating out the "interpreter"
    functions of gdb into self-contained modules.  There are a couple
@@ -37,20 +39,14 @@
 #include "interps.h"
 #include "completer.h"
 #include "gdb_string.h"
+#include "gdb-events.h"
 #include "gdb_assert.h"
 #include "top.h"		/* For command_loop.  */
 #include "exceptions.h"
-#include "continuations.h"
-
-/* True if the current interpreter in is async mode.  See interps.h
-   for more details.  This starts out disabled, until all the explicit
-   command line arguments (e.g., `gdb -ex "start" -ex "next"') are
-   processed.  */
-int interpreter_async = 0;
 
 struct interp
 {
-  /* This is the name in "-i=" and set interpreter.  */
+  /* This is the name in "-i=" and set interpreter. */
   const char *name;
 
   /* Interpreters are stored in a linked list, this is the next
@@ -63,17 +59,23 @@ struct interp
      object is a bit confused.  */
   void *data;
 
-  /* Has the init_proc been run?  */
+  /* Has the init_proc been run? */
   int inited;
+
+  /* This is the ui_out used to collect results for this interpreter.
+     It can be a formatter for stdout, as is the case for the console
+     & mi outputs, or it might be a result formatter.  */
+  struct ui_out *interpreter_out;
 
   const struct interp_procs *procs;
   int quiet_p;
 };
 
-/* Functions local to this file.  */
+/* Functions local to this file. */
 static void initialize_interps (void);
+static char **interpreter_completer (char *text, char *word);
 
-/* The magic initialization routine for this module.  */
+/* The magic initialization routine for this module. */
 
 void _initialize_interpreter (void);
 
@@ -81,22 +83,23 @@ void _initialize_interpreter (void);
 
 static struct interp *interp_list = NULL;
 static struct interp *current_interpreter = NULL;
-static struct interp *top_level_interpreter_ptr = NULL;
 
 static int interpreter_initialized = 0;
 
 /* interp_new - This allocates space for a new interpreter,
    fills the fields from the inputs, and returns a pointer to the
-   interpreter.  */
+   interpreter. */
 struct interp *
-interp_new (const char *name, const struct interp_procs *procs)
+interp_new (const char *name, void *data, struct ui_out *uiout,
+	    const struct interp_procs *procs)
 {
   struct interp *new_interp;
 
   new_interp = XMALLOC (struct interp);
 
   new_interp->name = xstrdup (name);
-  new_interp->data = NULL;
+  new_interp->data = data;
+  new_interp->interpreter_out = uiout;
   new_interp->quiet_p = 0;
   new_interp->procs = procs;
   new_interp->inited = 0;
@@ -123,30 +126,20 @@ interp_add (struct interp *interp)
    init proc is successful, return 1, if it fails, set the old
    interpreter back in place and return 0.  If we can't restore the
    old interpreter, then raise an internal error, since we are in
-   pretty bad shape at this point.
-
-   The TOP_LEVEL parameter tells if this new interpreter is
-   the top-level one.  The top-level is what is requested
-   on the command line, and is responsible for reporting general
-   notification about target state changes.  For example, if
-   MI is the top-level interpreter, then it will always report
-   events such as target stops and new thread creation, even if they
-   are caused by CLI commands.  */
+   pretty bad shape at this point. */
 int
-interp_set (struct interp *interp, int top_level)
+interp_set (struct interp *interp)
 {
   struct interp *old_interp = current_interpreter;
   int first_time = 0;
-  char buffer[64];
 
-  /* If we already have an interpreter, then trying to
-     set top level interpreter is kinda pointless.  */
-  gdb_assert (!top_level || !current_interpreter);
-  gdb_assert (!top_level || !top_level_interpreter_ptr);
+
+  char buffer[64];
 
   if (current_interpreter != NULL)
     {
-      ui_out_flush (current_uiout);
+      do_all_continuations ();
+      ui_out_flush (uiout);
       if (current_interpreter->procs->suspend_proc
 	  && !current_interpreter->procs->suspend_proc (current_interpreter->
 							data))
@@ -161,11 +154,9 @@ interp_set (struct interp *interp, int top_level)
     }
 
   current_interpreter = interp;
-  if (top_level)
-    top_level_interpreter_ptr = interp;
 
   /* We use interpreter_p for the "set interpreter" variable, so we need
-     to make sure we have a malloc'ed copy for the set command to free.  */
+     to make sure we have a malloc'ed copy for the set command to free. */
   if (interpreter_p != NULL
       && strcmp (current_interpreter->name, interpreter_p) != 0)
     {
@@ -174,19 +165,18 @@ interp_set (struct interp *interp, int top_level)
       interpreter_p = xstrdup (current_interpreter->name);
     }
 
-  /* Run the init proc.  If it fails, try to restore the old interp.  */
+  uiout = interp->interpreter_out;
+
+  /* Run the init proc.  If it fails, try to restore the old interp. */
 
   if (!interp->inited)
     {
       if (interp->procs->init_proc != NULL)
 	{
-	  interp->data = interp->procs->init_proc (interp, top_level);
+	  interp->data = interp->procs->init_proc ();
 	}
       interp->inited = 1;
     }
-
-  /* Do this only after the interpreter is initialized.  */
-  current_uiout = interp->procs->ui_out_proc (interp);
 
   /* Clear out any installed interpreter hooks/event handlers.  */
   clear_interpreter_hooks ();
@@ -194,7 +184,7 @@ interp_set (struct interp *interp, int top_level)
   if (interp->procs->resume_proc != NULL
       && (!interp->procs->resume_proc (interp->data)))
     {
-      if (old_interp == NULL || !interp_set (old_interp, 0))
+      if (old_interp == NULL || !interp_set (old_interp))
 	internal_error (__FILE__, __LINE__,
 			_("Failed to initialize new interp \"%s\" %s"),
 			interp->name, "and could not restore old interp!\n");
@@ -203,15 +193,15 @@ interp_set (struct interp *interp, int top_level)
 
   /* Finally, put up the new prompt to show that we are indeed here. 
      Also, display_gdb_prompt for the console does some readline magic
-     which is needed for the console interpreter, at least...  */
+     which is needed for the console interpreter, at least... */
 
   if (!first_time)
     {
       if (!interp_quiet_p (interp))
 	{
-	  xsnprintf (buffer, sizeof (buffer),
-		     "Switching to interpreter \"%.24s\".\n", interp->name);
-	  ui_out_text (current_uiout, buffer);
+	  sprintf (buffer, "Switching to interpreter \"%.24s\".\n",
+		   interp->name);
+	  ui_out_text (uiout, buffer);
 	}
       display_gdb_prompt (NULL);
     }
@@ -239,59 +229,18 @@ interp_lookup (const char *name)
   return NULL;
 }
 
-/* Returns the current interpreter.  */
+/* Returns the current interpreter. */
 
 struct ui_out *
 interp_ui_out (struct interp *interp)
 {
   if (interp != NULL)
-    return interp->procs->ui_out_proc (interp);
+    return interp->interpreter_out;
 
-  return current_interpreter->procs->ui_out_proc (current_interpreter);
+  return current_interpreter->interpreter_out;
 }
 
-int
-current_interp_set_logging (int start_log, struct ui_file *out,
-			    struct ui_file *logfile)
-{
-  if (current_interpreter == NULL
-      || current_interpreter->procs->set_logging_proc == NULL)
-    return 0;
-
-  return current_interpreter->procs->set_logging_proc (current_interpreter,
-						       start_log, out,
-						       logfile);
-}
-
-/* Temporarily overrides the current interpreter.  */
-struct interp *
-interp_set_temp (const char *name)
-{
-  struct interp *interp = interp_lookup (name);
-  struct interp *old_interp = current_interpreter;
-
-  if (interp)
-    current_interpreter = interp;
-  return old_interp;
-}
-
-/* Returns the interpreter's cookie.  */
-
-void *
-interp_data (struct interp *interp)
-{
-  return interp->data;
-}
-
-/* Returns the interpreter's name.  */
-
-const char *
-interp_name (struct interp *interp)
-{
-  return interp->name;
-}
-
-/* Returns true if the current interp is the passed in name.  */
+/* Returns true if the current interp is the passed in name. */
 int
 current_interp_named_p (const char *interp_name)
 {
@@ -344,13 +293,12 @@ static int
 interp_set_quiet (struct interp *interp, int quiet)
 {
   int old_val = interp->quiet_p;
-
   interp->quiet_p = quiet;
   return old_val;
 }
 
 /* interp_exec - This executes COMMAND_STR in the current 
-   interpreter.  */
+   interpreter. */
 int
 interp_exec_p (struct interp *interp)
 {
@@ -377,16 +325,23 @@ clear_interpreter_hooks (void)
   /*print_frame_more_info_hook = 0; */
   deprecated_query_hook = 0;
   deprecated_warning_hook = 0;
+  deprecated_create_breakpoint_hook = 0;
+  deprecated_delete_breakpoint_hook = 0;
+  deprecated_modify_breakpoint_hook = 0;
   deprecated_interactive_hook = 0;
+  deprecated_registers_changed_hook = 0;
   deprecated_readline_begin_hook = 0;
   deprecated_readline_hook = 0;
   deprecated_readline_end_hook = 0;
   deprecated_register_changed_hook = 0;
+  deprecated_memory_changed_hook = 0;
   deprecated_context_hook = 0;
   deprecated_target_wait_hook = 0;
   deprecated_call_command_hook = 0;
+  deprecated_error_hook = 0;
   deprecated_error_begin_hook = 0;
   deprecated_command_loop_hook = 0;
+  clear_gdb_event_hooks ();
 }
 
 /* This is a lazy init routine, called the first time the interpreter
@@ -397,7 +352,7 @@ static void
 initialize_interps (void)
 {
   interpreter_initialized = 1;
-  /* Don't know if anything needs to be done here...  */
+  /* Don't know if anything needs to be done here... */
 }
 
 static void
@@ -410,15 +365,20 @@ interpreter_exec_cmd (char *args, int from_tty)
   unsigned int i;
   int old_quiet, use_quiet;
 
-  if (args == NULL)
-    error_no_arg (_("interpreter-exec command"));
-
-  prules = gdb_buildargv (args);
-  make_cleanup_freeargv (prules);
+  prules = buildargv (args);
+  if (prules == NULL)
+    {
+      error (_("unable to parse arguments"));
+    }
 
   nrules = 0;
-  for (trule = prules; *trule != NULL; trule++)
-    nrules++;
+  if (prules != NULL)
+    {
+      for (trule = prules; *trule != NULL; trule++)
+	{
+	  nrules++;
+	}
+    }
 
   if (nrules < 2)
     error (_("usage: interpreter-exec <interpreter> [ <command> ... ]"));
@@ -429,79 +389,80 @@ interpreter_exec_cmd (char *args, int from_tty)
   if (interp_to_use == NULL)
     error (_("Could not find interpreter \"%s\"."), prules[0]);
 
-  /* Temporarily set interpreters quiet.  */
+  /* Temporarily set interpreters quiet */
   old_quiet = interp_set_quiet (old_interp, 1);
   use_quiet = interp_set_quiet (interp_to_use, 1);
 
-  if (!interp_set (interp_to_use, 0))
+  if (!interp_set (interp_to_use))
     error (_("Could not switch to interpreter \"%s\"."), prules[0]);
 
   for (i = 1; i < nrules; i++)
     {
       struct gdb_exception e = interp_exec (interp_to_use, prules[i]);
-
       if (e.reason < 0)
 	{
-	  interp_set (old_interp, 0);
-	  interp_set_quiet (interp_to_use, use_quiet);
-	  interp_set_quiet (old_interp, old_quiet);
+	  interp_set (old_interp);
+	  interp_set_quiet (interp_to_use, old_quiet);
 	  error (_("error in command: \"%s\"."), prules[i]);
+	  break;
 	}
     }
 
-  interp_set (old_interp, 0);
+  interp_set (old_interp);
   interp_set_quiet (interp_to_use, use_quiet);
   interp_set_quiet (old_interp, old_quiet);
 }
 
-/* List the possible interpreters which could complete the given text.  */
-static VEC (char_ptr) *
-interpreter_completer (struct cmd_list_element *ignore, char *text, char *word)
+/* List the possible interpreters which could complete the given text. */
+static char **
+interpreter_completer (char *text, char *word)
 {
+  int alloced = 0;
   int textlen;
-  VEC (char_ptr) *matches = NULL;
+  int num_matches;
+  char **matches;
   struct interp *interp;
 
+  /* We expect only a very limited number of interpreters, so just
+     allocate room for all of them plus one for the last that must be NULL
+     to correctly end the list. */
+  for (interp = interp_list; interp != NULL; interp = interp->next)
+    ++alloced;
+  matches = (char **) xcalloc (alloced + 1, sizeof (char *));
+
+  num_matches = 0;
   textlen = strlen (text);
   for (interp = interp_list; interp != NULL; interp = interp->next)
     {
       if (strncmp (interp->name, text, textlen) == 0)
 	{
-	  char *match;
-
-	  match = (char *) xmalloc (strlen (word) + strlen (interp->name) + 1);
+	  matches[num_matches] =
+	    (char *) xmalloc (strlen (word) + strlen (interp->name) + 1);
 	  if (word == text)
-	    strcpy (match, interp->name);
+	    strcpy (matches[num_matches], interp->name);
 	  else if (word > text)
 	    {
-	      /* Return some portion of interp->name.  */
-	      strcpy (match, interp->name + (word - text));
+	      /* Return some portion of interp->name */
+	      strcpy (matches[num_matches], interp->name + (word - text));
 	    }
 	  else
 	    {
-	      /* Return some of text plus interp->name.  */
-	      strncpy (match, word, text - word);
-	      match[text - word] = '\0';
-	      strcat (match, interp->name);
+	      /* Return some of text plus interp->name */
+	      strncpy (matches[num_matches], word, text - word);
+	      matches[num_matches][text - word] = '\0';
+	      strcat (matches[num_matches], interp->name);
 	    }
-	  VEC_safe_push (char_ptr, matches, match);
+	  ++num_matches;
 	}
     }
 
+  if (num_matches == 0)
+    {
+      xfree (matches);
+      matches = NULL;
+    }
+
   return matches;
-}
-
-struct interp *
-top_level_interpreter (void)
-{
-  return top_level_interpreter_ptr;  
-}
-
-void *
-top_level_interpreter_data (void)
-{
-  gdb_assert (top_level_interpreter_ptr);
-  return top_level_interpreter_ptr->data;  
 }
 
 /* This just adds the "interpreter-exec" command.  */
